--- a/templates_geral/indexgeral.html
+++ b/templates_geral/indexgeral.html
@@ -11,3 +11,11 @@
         {% endif %}
     {% endfor %}
 </ol>
+
+<ul>
+    {% for post in posts %}
+        <h2>{{ post.title }}</h2>
+        <h3>{{ post.sub_title }}</h3>
+        <p>{{ post.content }}</p>
+    {% endfor %}
+</ul>
